# Algorithms-and-ADT

./: README.md
Dataset/: Dataset.rar
Progetto 1 - Merge/cmake/: CMakeLists.txt
Progetto 1 - Merge/src/: DynamicArray.c  LinkedRecords.c  List.h  Merge.c  Merge.h  MergeTest.c  TestDynamicArray.c  TestDynamicArray.h  TestLinkedRecords.c  TestLinkedRecords.h  main.c  unity.c
Progetto 2/src/: Distance_func.java  Edit_distance.java  Edit_distanceTest.java  Edit_distance_TestsRunner.java  Main.java
Progetto 3/scripts/: compile_main
Progetto 3/src/: Main.java  Node.java  TestsRunner.java  Tree.java  TreeTest.java  UnionFindSet.java  UnionFindSetTest.java
Progetto 4/scripts/: run_main
Progetto 4/src/: Adjacency.java  Edge.java  Graph.java  GraphTests.java  Kruskal.java  KruskalTest.java  MSTDataset.java  Main.java  Node.java  TestsRunner.java  UnionFindSet.java
